Fix ignored pulse overlapping cntxt menu

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -377,7 +377,7 @@ REMINDERS
     flex-direction: column;
     gap: 2px;
     position: absolute;
-    z-index: 1;
+    z-index: 100;
 
     background-color: var(--sidebar-color);
     list-style: none;
